Reasonable support for single-host RestClient String argument. Support for de-serializing query string, useful in assertions.