@@ -3,9 +3,12 @@ package se.repos.restclient;
 import static org.junit.Assert.*;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.junit.Test;
@@ -13,13 +16,65 @@ import org.junit.Test;
 public class RestURLTest {
 
 	@Test
-	public void testRestURLString() {
+	public void testJavaURLpartial() {
+		try {
+			new URL("/a%20b/c/?d=e");
+			fail("Expected java.net.URL to throw exception on server-relative URL");
+		} catch (MalformedURLException e) {
+			// expected
+		}
+		URI i = null;
+		try {
+			i = new URI("/a%20b/c/?d=e");
+		} catch (URISyntaxException e) {
+			fail("java.net.URI should support server-relative URL");
+		}
+		assertEquals("/a b/c/", i.getPath());
+		assertEquals("/a%20b/c/", i.getRawPath());
+		assertEquals("d=e", i.getQuery());
+	}
+	
+	@Test
+	public void testRestURLStringFull() {
 		RestURL u = new RestURL("http://www.repos.se/?a=b");
 		assertEquals("http://www.repos.se/?a=b", u.toString());
 		assertEquals("shorthand", "http://www.repos.se/?a=b", u.s());
+		assertEquals("server-relative", "/?a=b", u.toStringPart());
+		assertEquals("shorthand server-relative", "/?a=b", u.p());
 		try {
-			assertEquals(new URL("http://www.repos.se/?a=b"), u.getURL());
-		} catch (MalformedURLException e) { fail("" + e); }
+			assertEquals(new URI("http://www.repos.se/?a=b"), u.getURI());
+		} catch (URISyntaxException e) {
+			fail("" + e);
+		}
+	}
+
+	@Test
+	public void testRestURLStringPart() throws URISyntaxException {
+		RestURL u = new RestURL("/a%20b/?x=y%20y&z=1&z=2");
+		assertEquals("/a%20b/?x=y%20y&z=1&z=2", u.toString());
+		assertEquals("shorthand", "/a%20b/?x=y%20y&z=1&z=2", u.s());
+		assertEquals("server-relative", "/a%20b/?x=y%20y&z=1&z=2", u.toStringPart());
+		assertEquals("shorthand server-relative", "/a%20b/?x=y%20y&z=1&z=2", u.p());
+		try {
+			u.getURL();
+			fail("Expecting getURL to fail when there's no server root");
+		} catch (Exception e) {
+			// expected
+		}
+		assertEquals(new URI("/a%20b/?x=y%20y&z=1&z=2"), u.getURI());
+		Map<String, List<String>> q = u.getQuery();
+		assertEquals("Two query param keys", 2, q.size());
+		assertEquals("y y", q.get("x").get(0));
+		assertEquals("To string should be the param value", "y y", "" + q.get("x"));
+		assertEquals("Two values for the same param name", 2, q.get("z").size());
+		assertEquals("Should maintain ordering", "1", q.get("z").get(0));
+		assertEquals("2", q.get("z").get(1));
+		assertEquals("toString should comma separate without spaces", "1,2", "" + q.get("z"));
+	}
+	
+	@Test(expected=IllegalArgumentException.class)
+	public void testRestURLPartNotAbsolute() {
+		new RestURL("x/");
 	}
 	
 	@Test
@@ -40,7 +95,7 @@ public class RestURLTest {
 			fail("Should validate the URL immediately upon construction");
 		} catch (IllegalArgumentException e) {
 			// expected
-		} 
+		}
 	}
 
 	@Test
@@ -86,12 +141,16 @@ public class RestURLTest {
 		RestURL url = new RestURL("http://somehost/r/a.txt", params);
 		
 		String q = url.toString();
-		System.out.println(q);
 		assertTrue(q.contains("key=val"));
 		assertTrue("Both types of space encoding are ok", q.contains("a+b") || q.contains("a%20b"));
 		assertTrue("Encoding should be UTF-8", q.contains("t%C3%A5t"));
 		// keys should never be encoded, if they need to it is the web service that should be changed
 		assertTrue("Should not encode keys", q.contains("list[]=1"));
+	}
+	
+	@Test
+	public void testAppendSameParam() {
+		
 	}
 
 }
